[fix] Overlapping divs

--- a/src/components/landing/hero/Hero.scss
+++ b/src/components/landing/hero/Hero.scss
@@ -13,15 +13,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  min-height: 100%;
-  min-width: 1024px;
-
-  width: 100%;
-  height: auto;
-
-  position: fixed;
-  top: 0;
-  left: 0;
+  min-height: 100vh;
 
   #landing_hero__heading_primary {
     @include primary--font(
